--- a/src/Components/Dashboard.module.css
+++ b/src/Components/Dashboard.module.css
@@ -1,9 +1,9 @@
-.DashboardContainer {
+/* .DashboardContainer {
     width: 75%;
    
     margin: 25px auto 0 auto;
     height: fit-content;
-}
+} */
 .CreateProject{
     height: fit-content;
     padding-bottom: 10px;
