--- a/src/Components/UI/Input.module.css
+++ b/src/Components/UI/Input.module.css
@@ -1,7 +1,10 @@
 .Input{
-    height:25px;
-    width:80%;
-    border:1px solid #bdc3c7;
+    height: 28px;
+    width: 100%;
+    border: 2px solid #bdc3c7;
+    border-radius: 5px;
+    margin-top:5px;
+
 }
 .Textarea{
 
