--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   margin: 25px auto 0 auto;
   height: fit-content;
 }
+@media(max-width:556px)
+{
+    .DashboardContainer{
+        width: 95%;
+    }
+}
