--- a/src/Components/Layout/Sidebar.module.css
+++ b/src/Components/Layout/Sidebar.module.css
@@ -9,6 +9,8 @@
     transition-property: width;
     transition-duration: 1.5s;
     z-index: 200;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 .openSidebar
 {
@@ -25,5 +27,5 @@
     text-align: center;
     padding-bottom: 20px;
     padding-top: 20px;
-    color: black;
+    color: #2980b9;
 }
